--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/jeans12/partials/_drupal.sass
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/jeans12/partials/_drupal.sass
@@ -121,7 +121,7 @@ body
       text-align: center
       width: 100%
       margin-bottom: 1em
-      font-size: 0.9em
+      font-size: 0.8em
     a
       font-weight: normal
       font-size: 1em
@@ -131,6 +131,7 @@ body
       text-decoration: underline  
 
 #block-dosomething-campaign-styles-campaign-nav
+  margin: 15px 0 0 -20px
   .highlight a
     background: $spitYellow
 
