--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/jeans12/partials/_panes.sass
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/jeans12/partials/_panes.sass
@@ -311,13 +311,14 @@ li.views-row /* clear floats on <li> wrapping the following fields: */
   form
     margin: 0 auto
     max-width: 600px
-  label
-    font-weight: 600  
-  input[type="text"]
-    padding: 0.8em 0.5em
-    float: left
-    width: 48%
-    margin: 1%
+    label
+      color: #fff
+      font-weight: 600  
+    input[type="text"]
+      padding: 0.8em 0.5em
+      float: left
+      width: 48%
+      margin: 1%
   .go-button
     margin: 4% 0 1% 0
     padding: 0.3em 0.7em
@@ -398,20 +399,20 @@ li.views-row /* clear floats on <li> wrapping the following fields: */
     font-size: 2em
     font-family: din-web
     text-transform: uppercase
-    background: url("assets/faq3.png")
+    background: url("//files.dosomething.org/files/campaigns/prep/arrows.png")
     background-repeat: no-repeat
     background-position: 50% 1.2em
     padding: 0 0 1em 0
     margin: 0 0 -1em 0
   h4
-    color: $spitPurple
+    color: $offBlack
     cursor: pointer
-    background: url("assets/faq2.png")
+    background: url("//files.dosomething.org/files/campaigns/prep/arrows.png")
     background-repeat: no-repeat
     background-position-y: 0.4em
     padding: 0.3em 1.2em
   h4.activeFAQ
-    background-position-y: -3.9em
+    background-position-y: -1.4em
   .go-button
     margin: 0 0 1% 0
 
